Wed Feb 28 13:01:34 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * CXX/Source.cpp
        * CXX/Inline.cpp
        * CXX/Header.cpp

          Various compile error/warning fixes in generated code.
        
        * XSC.mwc
        * XSC/Traversal/Elements.hpp
        * XSC/SemanticGraph/Schema.hpp
        * XSC/SemanticGraph/Elements.hpp
        * contrib/Utility.mpc
        * CXX/Elements.hpp
        * CXX/Generator.cpp
        * CXX/Generator.hpp
        * IDL/Generator.cpp
        * IDL/Generator.hpp
        * xsc.mpb
        * XSC.mpc
        * xsc.cpp
        
          Changes to support 1) removal of link-time dependancy on 
          CCF, 2) use of boost program options instead of command line
          parser from CCF.
        
Wed Feb 28 03:11:47 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * contrib
        
          Added CodeGenerationKit and Utility from the ACE repository
          as externals.

Wed Feb 21 16:27:30 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * xsc.cpp
          
          Fixed specification of default search path, so that it will
          correctly check the provided file as an absolute path.

Mon Feb 19 15:07:58 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * XSC/Parser.hpp
        * XSC/Parser.cpp
        
          Formatting changes, changes to support --search-path, fixed a 
          couple small memory leaks.  
        
        * XSC/XercesString.cpp
        * XSC/XercesString.hpp
        
          A simple std::string like wrapper for XMLCh* based strings.
        
        * XSC/XML_Schema_Resolver.cpp
        * XSC/XML_Schema_Resolver.hpp
          
          Simple schema resolver used by Xerces to support --search-path.
        
        * xsc.cpp
         
          Added new command line argument --search-path, wich can be used
          to create a stack of paths XSC will search when attempting to resolve